Added abstract and tiivistelmä

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -37,51 +37,54 @@
 \begin{spacing}{1.0}
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
-{\bf \textsf{Mikko Pohja: Maximizing quality in a small budget software project}}\\
-\textsf{Diplomityö, xx sivua, x liitesivua}\\
-\textsf{Xxxxxkuu 201x}\\
+{\bf \textsf{Mikko Pohja: Tyydyttävän laadun saavuttaminen startup-yrityksen ohjelmistoprojektissa}}\\
+\textsf{Diplomityö, 60 sivua}\\
+\textsf{Xxxxxkuu 2014}\\
 \textsf{Pääaine: }\\
 \textsf{Tarkastajat: }\\
 \textsf{Avainsanat: }\\
 \end{spacing}
  
 \noindent
-Konteksti
+Moderni ohjelmistokehitys on tehnyt mahdolliseksi nopeiden prototyyppien kehityksen pienellä budjetilla ja lyhyellä aikataululla. Tämä on mahdollistanut startup-yritysten yleistymisen. Nämä startup-yritykset voivat kokeilla ja kehittää liikeideaansa nopealla aikataululla käyttäen edistyneitä ohjelmistokehyksiä ja noudattaen ketterän ohjelmistokehityksen periaatteita. Kokenut tiimi kykenee luomaan toimivan prototyypin jo muutamassa viikossa.
  
 \noindent
-Ongelma
+Nopea ohjelmistokehitys saattaa johtaa ohjelmiston lähdekoodin ja rakenteen huonoon laatuun, joka hidastaa ja vaikeuttaa kehitystä tulevaisuudessa. Ohjelmiston laatuun täytyy alkaa kiinnittämään huomiota viimeistään siinä vaiheessa, kun liikeidea todetaan menestyväksi ja ohjelmiston kehitystä jatketaan prototyyppivaiheesta eteenpäin. 
 
 \noindent
-Mitä tehty ratkaisemiseksi (tässä diplomityössä..)
+Tässä diplomityössä on käsitelty perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta. Myös startup-yrityksistä sekä niiden laatukäsityksestä on kerrottu yleisellä tasolla. Lisäksi ohjelmistojenn laadun parantamiseen käytettyjä tekniikoita on tarkasteltu startupin näkökulmasta sekä yhdistetty perinteisiä laatumenetelmiä startupille tyypilliseen laadunvarmistukseen. Lopuksi on esitelty startup-yritykselle toteutettu ohjelmistoprojekti ja käsitelty sen laadun toteutumista tehtyjen haastattelujen pohjalta.
 
 \noindent
-Arvio onnistumisesta
+Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmistokehityksen ja modernin startup-yrityksen ohjelmistokehityksen välillä. Myös laadun parantamiseen käytetyt metodit eroavat näiden kehitysmuotojen välillä. Perinteiset metodit luottavat enemmän teknisiin lähestymistapoihin, joilla löydetään virheitä, kun taas modernissa laadunparannuksessa keskitytään enemmän ihmisiin ja kehitysprosessiin. Perinteiseen laadunparannukseen liittyviä teknisiä toimenpiteitä, kuten katselmointeja ja erilaisia testausmuotoja, voi kuitenkin soveltaa modernin laadunparannuksen osana. 
 
 \newpage
 \chapter*{ABSTRACT}
 \begin{spacing}{1.0}
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
-{\bf \textsf{AUTHOR : Title}}\\
-\textsf{Master of Science Thesis, xx pages, x Appendix pages}\\
-\textsf{xxxxxx 201x}\\
+{\bf \textsf{Mikko Pohja : Achieving satisfactory quality in a startup software project}}\\
+\textsf{Master of Science Thesis, 60 pages}\\
+\textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
 \textsf{Examiner: }\\
 \textsf{Keywords: }\\
 \end{spacing}
  
+ % Konteksti
+\noindent
+Progress in modern software development has made possible that small prototypes can be implemented with small budget and short schedule. The amount of startup companies has begun to grow since proving the business ideas with fast prototyping has become so easy. A team with sufficient experience can implement a simple working prototype as fast as in weeks.
  
+ % Ongelma
 \noindent
-ENG Konteksti
- 
-\noindent
-ENG Ongelma
+Development of these simple prototypes can lead to poor quality of code and structure of the product, which can complicate the future development. This can become an issue if the business idea is indeed validated and proven to be successful.
 
+ % Tässä diplomityössä (mitä tehty ratkaisemiseksi)
 \noindent
-ENG Mitä tehty ratkaisemiseksi (tässä diplomityössä..)
+This thesis discusses about software quality in both traditional software development and software startup environment. Methods traditionally used for improving quality and their efficiency are presented. These methods are also joined to the quality methods recommended for software startup environment. Finally, this thesis presents an example project done for a software startup.
 
+% Arvio onnistumisesta
 \noindent
-ENG Arvio onnistumisesta
+Conclusions from this thesis include that the definition of quality and methods improving it vary between traditional software development and modern startup environment. In traditional software development, methods for improving quality are focused on technical activities discovering defects. In turn, modern methodologies concentrate more on people and processes. However, activities from traditional quality improvement can be applied to the methods recommended for startup environment.
 
 
 \newpage
