--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -11,7 +11,7 @@
 \vspace{6.8cm}
  
 \noindent{\bf\large \textsf{Mikko Pohja}}\\
-{\bf\large \textsf{Achieving satisfactory quality in a startup software project}}\\
+{\bf\large \textsf{Quality control in a startup software project}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
@@ -37,7 +37,7 @@
 \begin{spacing}{1.0}
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
-{\bf \textsf{Mikko Pohja: Tyydyttävän laadun saavuttaminen startup-yrityksen ohjelmistoprojektissa}}\\
+{\bf \textsf{Mikko Pohja: Laadunhallinta startup-yrityksen ohjelmistoprojektissa}}\\
 \textsf{Diplomityö, 60 sivua}\\
 \textsf{Xxxxxkuu 2014}\\
 \textsf{Pääaine: }\\
@@ -62,7 +62,7 @@ Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmisto
 \begin{spacing}{1.0}
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
-{\bf \textsf{Mikko Pohja : Achieving satisfactory quality in a startup software project}}\\
+{\bf \textsf{Mikko Pohja : Quality control in a startup software project}}\\
 \textsf{Master of Science Thesis, 60 pages}\\
 \textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
