Added introduction of the structure to the beginning of each chapter. Minor tweaks

--- a/background/s_startup.tex
+++ b/background/s_startup.tex
@@ -1,5 +1,6 @@
 
  \section{Startup}
+\label{sec:startup}
 
 The term became popular during the dotcom bubble, when a great number of companies were founded to do business on the Internet. Steve Blank lists some principles of a startup in his blog post "What’s A Startup? First Principles.". Blank defines a startup as "an organization formed to search for a repeatable and scalable business model". The first goal for a business model can be revenue, profits, users or click-throughs. The business model must be quickly and constantly tested and iterated by using Agile Development. Blank also tells that the business model of most startups is changed multiple times.~\cite{blank2010startup}
 
