--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -1,5 +1,6 @@
 
  \section{Quality Assurance in the Project}
+\label{sec:qa_case}
 
 Quality assurance in the Päikky project was not formally specified or planned beforehand. Methods and processes were selected primarily by individual developers and talked through with the whole team. Methods and tools were taken to use when necessary.
 
@@ -46,6 +47,7 @@ Quality assurance in the Päikky project was not formally specified or planned b
 
 
  \section{Achieved Quality in The Project}
+\label{sec:achieved_quality}
 
  The quality achieved in the project was evaluated by interpreting the views and opinions of the product stakeholders. A separate informal interview sessions were arranged with the development team, project manager and the customer representatives. In addition, notes from a retrospective session after the fifth phase were considered.
 
