--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -1,5 +1,6 @@
 
  \section{Project objectives}
+\label{sec:objectives}
 
 The project was built on an idea from MukavaIT. The big picture and the goals of the project were specified in advance and introduced to the developing team. Lower level specifications and implementation details were designed in cooperation between MukavaIT and the development team.
 
@@ -12,6 +13,7 @@ During the development, a better understanding of the market was achieved. It wa
 This understanding of the market was not present when deciding the priorities of the upcoming features, so some of the effort put to reporting and other features could have been allocated to more appealing features.
 
  \section{Project Execution}
+\label{sec:execution}
 
 The project was divided into multiple phases. In the scope of this thesis, five phases are observed. Each of the phases had predefined objectives and a time frame. The project was executed using agile practices, so the phases were divided in sprints lasting usually a week. A weekly session, with both the development team and the customers present, was arranged in where the previous sprint was reviewed and the next sprint was planned. The contents of the sprints and the backlog were managed with Pivotal Tracker, a tool for agile project management.
 
