--- a/improving/c_improving.tex
+++ b/improving/c_improving.tex
@@ -1,7 +1,7 @@
 
  \chapter{Improving Software Quality}
 
-In this chapter, the basic methodology and activities for improving quality are introduced. Topics include dividing the life cycle of a software into separate periods from the perspective of quality improvement. These periods and the according activities are then described in detail. Unless stated otherwise, the content of this chapter is based on the work of Capers Jones presented in the book The Economics of Software Quality.~\cite{jones2011economics}
+In this chapter, the basic methodology and activities for improving quality are introduced. Section~\ref{sec:life_cycle} divides the life cycle of a software into separate periods from the perspective of quality improvement. Section~\ref{sec:preventing} introduces the defect prevention and related activities. Section~\ref{sec:pretest} describes the period and activities prior to testing phase. Section~\ref{sec:testing} explains the testing phase and different methods involved. Section~\ref{sec:post_release} describes software quality after the release. Unless stated otherwise, the content of this chapter is based on the work of Capers Jones presented in the book The Economics of Software Quality~\cite{jones2011economics}.
 
 % ROI: Three main activities: Review, process audit and testing
 
