--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -1,4 +1,5 @@
 \section{Post Release}
+\label{sec:post_release}
 
 After a software product has been released to the market, it practically always still has defects in it. IBM calls these defects latent defects, because before the release, these defects have not yet been found as problems to customers. The existence of these defects is due to the imperfect effectiveness of the defect removal. Usually the defect removal efficiency is around 85\% and virtually never reaches 100\%.
 
