--- a/improving/s_preventing.tex
+++ b/improving/s_preventing.tex
@@ -1,5 +1,6 @@
 
  \section{Preventing defects}
+\label{sec:preventing}
 
 Defect prevention is a set of methods used to lower the amount of defects coming from one or many of the defect origins. Software defects are originated from different parts of the project. Defect origins can be technical and nontechnical. Some nontechnical origins of defects include requirements and documentation. Technical origins include architecture, design and code. Because defects are originated from multiple sources, there is no single method for covering them all. Most methods are not effective against all sources. Usually there are 1-4 defect prevention methods used.
 
