--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -10,6 +10,7 @@
 %	-Osuiskohan tähän Lean Startupin skaalausvaihe
 
  \section{Quality in a Startup project}
+\label{sec:quality_startup}
 
 Improving quality in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development.~\cite{ries2011lean}
 
@@ -24,6 +25,7 @@ When working with a 3D chat software called IMVU, Ries and his colleagues decide
 Lean Startup method is aiming for the goal of winning over customers and not opposed to building high-quality products. Thus, it is necessary to set aside some professional standards to enable the validated learning as soon as possible. This is not supposed to allow operating in an undisciplined manner. This is important as there are some quality problems that can slow down the Build-Measure-Learn feedback loop. In addition, defects complicate the evolution of the product and interfere with the ability to learn. Helping the development of the MVP means removing any feature, process or effort that does not lead directly to the learning sought.~\cite{ries2011lean}
 
 \section{Foundations of high quality}
+\label{sec:foundations_quality}
 
 Implementing high quality software starts from the beginning of the project. The foundations of high quality have to be solid for the overall high quality to emerge. These foundations are at the structure of the code and other deliverables.
 
@@ -44,6 +46,7 @@ Implementing high quality software starts from the beginning of the project. The
  Conceptual integrity is smoothness and uniformity of the whole system's central concepts. The architecture of the system has an effective balance between flexibility, maintainability, efficiency and responsiveness. Conceptual integrity is a prerequisite to perceived integrity. To be able to achieve perceived integrity, the system must have a consistent design. As the system evolves and matures, conceptual integrity emerges. Although conceptual integrity is needed for perceived integrity, the existence of the former does not ensure the existence of the latter. This is because conceptual integrity is not sufficient for a successful customer experience, if the system does not meet the users' need.~\cite{poppendieck2003LSD}
 
 \section{Aiming towards high quality}
+\label{sec:aiming_quality}
 
 Achieving high quality requires discipline in both team work and individual development. A team of motivated experts with solid leadership is able to make the required decisions and keep the pace of development high. This kind of team can execute the development in a way that enables the emerging of integrity in the product.
 
@@ -142,6 +145,7 @@ Using these pretest defect removal methods can be beneficial also when doing LSD
 \textbf{Testing.} Using traditional testing methods in startup environment is a topic which has to be planned per project. As LSD divides testing in developer and customer tests, each project has to decide which of the traditional methods of testing have the best result when applied. Plain unit testing and subroutine testing can be relevant in some situations, but the use of excessive unit testing in pursuit for full test coverage can be waste of time and resources. In startup environment, the development is usually done as a cross-application development covering full features. In this kind of development the testing should be focused on testing the application as a whole. Though, testing single parts of the application can be useful and even necessary depending on the software.
 
 \section{The Don'ts - Things To Avoid}
+\label{sec:donts}
 
 % Liittyy vahvasti Leanin Wasteen
 %	~\cite{poppendieck2006implementing}
