--- a/qa_startup/s_qa_futurice.tex
+++ b/qa_startup/s_qa_futurice.tex
@@ -1,5 +1,6 @@
 
  \section{Software Quality in Futurice}
+\label{sec:quality_futurice}
 
 % http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf
 Futurice is a lean service creation company founded in Finland. There are currently around 200 employees in four offices located in three countries. The employees of the company are passionate multi-talents in areas from technology, business consultancy and service design.~\cite{futuricefact}
