--- a/background/c_background.tex
+++ b/background/c_background.tex
@@ -1,7 +1,7 @@
 
  \chapter{Background}
  
-This chapter describes software quality and startup environment. The first section describes software quality in general and the motivation behind improving quality. The second section explains the context of a startup environment and the phases in the life of a startup.
+This chapter describes software quality and startup environment. Section~\ref{sec:software_quality} describes software quality in general and the motivation behind improving quality. Section~\ref{sec:startup} explains the context of a startup environment and the phases in the life of a startup.
 
  \input{background/s_quality_general}
 
