--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -16,7 +16,7 @@ These changes in the industry along with the progress in development processes h
 % Helppo ja nopea tekeminen johtaa helposti huonoon laatuun sekä budjetin ja aikataulun kasvuun
 % 
 
-Since the amount of attempts for success are increasing, so is the amount of companies succeeding. When a product built with minimum effort starts to prosper, the demand for high quality emerges. As products done by traditional software development are built with large amounts of effort used to improving the quality of the product, modern startup entrepreneurs may become confused when considering the quality of their product. The methods and activities used in traditional software development may seem separate from the rapid development of modern products. In addition, modern software development methodologies focus on different aspects of software quality than in traditional software development.
+Since the number of attempts for success are increasing, so is the number of companies succeeding. When a product built with minimum effort starts to prosper, the demand for high quality emerges. As products done by traditional software development are built with large amounts of effort used to improving the quality of the product, modern startup entrepreneurs may become confused when considering the quality of their product. The methods and activities used in traditional software development may seem separate from the rapid development of modern products. In addition, modern software development methodologies focus on different aspects of software quality than in traditional software development.
 
 %"Tässä diplomityössä..."
 % Käsitellään perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta
@@ -24,14 +24,8 @@ Since the amount of attempts for success are increasing, so is the amount of com
 % Kerrotaan perinteisten laadunvarmistusmenetelmien soveltumisesta nykyisiin startupin juttuihin
 % Käsitellään esimerkkinä CASE-projekti, joka on pienehkön budjetin projekti startupille
 
-In this thesis, software quality in a startup environment is discussed. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project, executed in a Finnish software company Futurice, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
+This thesis presents software quality in a startup environment and suggests the activities for improving it. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project, executed in a Finnish software company Futurice, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
 
 %Rakenne luku kerrallaan + sisällön esittely "lause per luku"
 
-Chapter 2 introduces the background by defining software quality and startup environment.
-
-Chapter 3 describes the methods and activities improving software quality and divides them in phases of traditional software development.
-
-Chapter 4 redefines quality in context of a software startup and describes the methods of quality improvement applicable in startup software development.
-
-Chapter 5 presents the execution and phases of the case project and evaluates the quality achieved based on the interviews of the stakeholders.
+The rest of this thesis is organised as follows. Chapter 2 introduces the background by defining software quality and startup environment. Chapter 3 describes the methods and activities improving software quality and divides them in phases of traditional software development. Chapter 4 redefines quality in context of a software startup and describes the methods of quality improvement applicable in startup software development. Chapter 5 presents the execution and phases of the case project and evaluates the quality achieved based on the interviews of the stakeholders.
