--- a/qa_startup/c_qa_startup.tex
+++ b/qa_startup/c_qa_startup.tex
@@ -1,7 +1,7 @@
 
  \chapter{Improving Quality in Software Startup Project}
 
-This chapter describes the differences between quality improvement in traditional software development and modern software startup. First, the meaning of software quality is redefined in a startup environment. Second, the basis of quality and the activities improving quality in a startup environment are described. Third, the activities from traditional software development are linked to the activities used in modern software development. Finally, the practices used in the company responsible for case project described in the next chapter are introduced.
+This chapter describes the differences between quality improvement in traditional software development and modern software startup. Section~\ref{sec:quality_startup} redefines the meaning of software quality in a startup environment. Section~\ref{sec:foundations_quality} describes the basis of quality. Section~\ref{sec:aiming_quality} introduces the methods for improving quality in a startup environment and combines the activities from traditional and modern software development. Section~\ref{sec:donts} introduces common things to avoid in quality improvement. Finally, section ~\ref{sec:quality_futurice} describes the practices used in the company responsible for case project described in the next chapter.
 
 \input{qa_startup/s_evaluation}
 
