--- a/books.bib
+++ b/books.bib
@@ -149,3 +149,20 @@ year = {2014},
 url = {http://www.qsm.com/resources/function-point-languages-table}
 }
 
+@misc{iso25010,
+   Key = {ISO 25010},
+   publisher = {ISO, Geneva, Switzerland},
+   type = {Norm},
+   title = {Systems and software engineering — Systems and software Quality Requirements and Evaluation (SQuaRE) — System and software quality models},
+   number = {ISO 25010},
+   year = {2011},
+}
+
+@misc{iso9126,
+   Key = {ISO 9126},
+   publisher = {ISO, Geneva, Switzerland},
+   type = {Norm},
+   title = {Software engineering -- Product quality -- Part 1: Quality model},
+   number = {ISO 9126},
+   year = {2001},
+}
