--- a/background/s_quality_general.tex
+++ b/background/s_quality_general.tex
@@ -7,10 +7,10 @@ Quality is an attribute of the item in question. It is often described as a comb
 
 \subsection{Motivation}
 
-Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free"~\cite{crosby1980quality}. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself doesn't create costs but the lack of it does.
+Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free"~\cite{crosby1980quality}. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself does not create costs but the lack of it does.
 
 %\ Cancellation 31\% for 10000 function point projects. Costs 35M\$ vs high quality 20m\$
-Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects of that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects of similar size with good quality have about 40\% lower costs. These figures endorse the effort put towards the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.~\cite{jones2011economics}
+Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects of that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects of similar size with good quality have about 40\% lower costs. These figures endorse the effort put towards the software quality and make it clear that at least in large scale projects, quality control should not be ignored.~\cite{jones2011economics}
 
 % ECO: page 19 Reduces the odds of large-system cancellations, Shortens development schedules, Lowers development costs, Lowers maintenance costs, Reduces warranty costs, Increases customer satisfaction
 Capers Jones has listed several points that make high quality a major economic benefit. In the development of large systems, high quality from the beginning can reduce the probability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lower the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers.~\cite{jones2011economics}
@@ -23,13 +23,13 @@ Jones expresses concerns towards the poor measurement of software quality causin
 \subsection{Software Quality Defined}
 
 % ECO: Chapter 1
-The word "quality" has many tones and thus it complicates defining quality and especially software quality. It can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
+The word "quality" has many tones. This complicates defining quality and especially software quality. It can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies to several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
 
 % http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html
 % Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
 
  
-The official quality standard in software is defined in ISO 25010. It was brought up to date in 2011 from ISO 9126 published in 1991. ISO 25010 introduces a quality model which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.~\cite{ISOBlog}
+The official quality standard in software is defined in ISO 25010~\cite{iso25010}. It was brought up to date in 2011 from ISO 9126 published in 1991~\cite{iso9126}. ISO 25010 introduces a quality model which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.~\cite{ISOBlog}
 
 In addition to the quality model, the 25010 standard defines the model of software quality in use. This model consists of five main characteristics. Effectiveness is the accuracy and completeness with which users achieve specified goals. Efficiency is the amount of consumed resources in relation to accuracy and completeness with which users achieve goals. Satisfaction is the degree to which users are satisfied with the experience of using the product.Safety is the degree to which a product does not lead to a state in which life, health, property, or the environment is endangered. Usability is the extent to which product can be used by specified users to achieve specified goals with effectiveness, efficiency and satisfaction.~\cite{ISOBlog}
 % Haikala s.48: toiminnan laatu vs tuotteen laatu
